Closed Bug 1543393 Opened 5 years ago Closed 5 years ago

Changing the element order defined in gOriginsList makes test failure

Categories

(Toolkit :: Telemetry, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla68
Tracking Status
firefox68 --- fixed

People

(Reporter: xeonchen, Assigned: xeonchen)

References

Details

Attachments

(1 file)

There's currently only 2 strings in [1], if we swap the order, the TelemetryTestFixture.EncodedSnapshot will fail.

Assertion failure: shardIndex < metricData.Length(), at toolkit/components/telemetry/core/TelemetryOrigin.cpp:218

[1] https://searchfox.org/mozilla-central/rev/dd7e27f4a805e4115d0dbee70e1220b23b23c567/toolkit/components/telemetry/core/TelemetryOrigin.cpp#251-252

Pushed by xeonchen@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/2ac987c37cda
shardIndex should not use ceil(); r=chutten
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: