Bug 1543393 - shardIndex should not use ceil(); r=chutten

Differential Revision: https://phabricator.services.mozilla.com/D26909